--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
