--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
   }
 }
