--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "bcrypt": "^5.1.1",
+    "fs-extra": "^11.2.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
