--- a/client/uni/package.json
+++ b/client/uni/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.0",
+    "@types/react-datepicker": "^7.0.0",
     "@types/stylis": "^4.2.6",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
